GWT fixes: Removed use of Java 9 List.of method.